syntax = "proto3";
package messages;

import "messages/custom_fields.proto";

message UnitCreatedEvent {
  option (messages.AggregateRootField) = "UnitID";

  string UnitID = 1;
  string RequesterID = 2;
  string Name = 3;
  string Description = 4;
  string URLParameterName = 5;  
}

message PrivilegeGrantedEvent {
  option (messages.AggregateRootField) = "UnitID";

  string UnitID = 1;
  string RequesterID = 2;
  string MemberID = 3;
  bool PollingRight = 4;
  bool VotingRight = 5;
  bool InitiativeRight = 6;
  bool ManagementRight = 7;
  uint32 Weight = 8;
}

message PrivilegeRevokedEvent {
  option (messages.AggregateRootField) = "UnitID";

  string UnitID = 1;
  string RequesterID = 2;
  string MemberID = 3;
  uint32 Weight = 4;
}
