syntax = "proto3";
package messages;

import "messages/custom_fields.proto";

message UnitProjection {
  option (messages.AggregateRootField) = "UnitID";

  string UnitID = 1;
  string Name= 2;
  string Description = 3;
  string URLParameterName = 4;
  uint32 MemberCount = 5;
  uint32 TotalWeight = 6;
}


